--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,82 @@
-body {
-    font-family: 'Open Sans', sans-serif;
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  background-image: url('../assets/background.jpg ');
+   /* Full height */
+   height: 100%; 
+   width: 100%;
+ 
+   /* Create the parallax scrolling effect */
+   background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
-div.articles {
+.back {
+  width:10px;
+  height:10px;
+  margin-right:5px;
+}
+
+.index {
+  text-align: center;
+
+}
+
+.breaker {
+  color: rgb(85, 0, 0);
+  background-color:rgb(100, 100, 100);
+  text-align:center;
+  padding:50px 80px;
+  text-align: justify;
+}
+
+.articles {
     text-align: center;
 }
 
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+table.blueTable {
+  font-family: "Times New Roman", Times, serif;
+  border: 1px solid #000000;
+  background-color: #EEEEEE;
+  width: 30%;
+  text-align: center;
+  border-collapse: collapse;
+}
+table.blueTable td, table.blueTable th {
+  border: 1px solid #AAAAAA;
+  padding: 2px 5px;
+}
+table.blueTable tbody td {
+  font-size: 13px;
+}
+table.blueTable tr:nth-child(even) {
+  background: #D0E4F5;
+}
+table.blueTable tfoot td {
+  font-size: 14px;
+}
+table.blueTable tfoot .links {
+  text-align: right;
+}
+table.blueTable tfoot .links a{
+  display: inline-block;
+  background: #1C6EA4;
+  color: #FFFFFF;
+  padding: 2px 8px;
+  border-radius: 5px;
+}
 
-
-hr.style1 { 
+hr.style4 { 
     height: 30px; 
     border-style: solid; 
     border-color: #8c8b8b; 
     border-width: 1px 0 0 0; 
     border-radius: 20px; 
   } 
-  hr.style1:before { 
+  hr.style4:before { 
     display: block; 
     content: ""; 
     height: 30px; 
@@ -30,4 +86,5 @@ hr.style1 {
     border-width: 0 0 1px 0; 
     border-radius: 20px; 
   }
-  
+
+
